# atomslm

./: .gitignore  LICENSE  README.md  convert_to_gguf.py  dataset.py  main.py  model.py  prepare_hf.py  pyproject.toml  test_model.py  train.py
model/: config.json
