[project]
name = "atomslm"
version = "0.1.0"
description = "A from-scratch mini transformer language model (Gemma-like) trained on FineWeb-Edu"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "datasets>=4.8.5",
    "gguf>=0.19.0",
    "numpy>=2.0.0",
    "pyarrow>=24.0.0",
    "torch>=2.12.0",
    "transformers>=5.9.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu118"
